[package]
name = "pico_ploc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = "1.15"
rdst = { version = "0.20", default-features = false }
forte = { git = "https://github.com/NthTensor/Forte" }
rayon = { version = "1.9.0" }
# Noop unless one of the profile-with features below is also used
profiling = { version = "1.0", optional = true }
argh = "0.1.13"
thread_local = "1.1.8"

[dev-dependencies]
image = "0.24"
minifb = "0.28"

[features]
scope_print = ["scope_print_major"]
scope_print_major = []

profile = ["dep:profiling"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
